<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalcFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18sp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/tool_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="4 3/4'"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:background="@drawable/rounded_shap"
                android:gravity="center"
                android:padding="7dp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:text="HYDRA JAR"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_shap"
                android:gravity="center"
                android:padding="7dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/JarUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/jarring_up"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_jarring_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/JarDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/jarring_down"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_jarring_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minOv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/minimum_overpull"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_minimum_overpull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maxOv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/maximum_overpull"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_maximum_overpull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="16sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:background="@drawable/rounded_shap"
            android:layout_margin="9dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mldhd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/max_load_during_hydraulic_delay"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/txt_max_load_during"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pumpOpenArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/pump_open_area"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_pump_open_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upJar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/up_jar_latch_setting"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_up_jar_latch_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/downJarLatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/down_jar_latch_setting"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_down_jar_latch_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/weight_above_jar"
                android:textColor="@color/blue"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/edt_weight_above_jar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="0"
                android:inputType="number"
                android:textColor="@color/red"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/drag_force"
                android:textColor="@color/blue"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/edt_drag_force"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="0"
                android:inputType="number"
                android:textColor="@color/red"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bit_pressure_drop"
                android:textColor="@color/blue"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/edt_bit_pressure_drop"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="0"
                android:inputType="number"
                android:textColor="@color/red"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/pump_open_force"
                android:textColor="@color/blue"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/edt_pump_open_force"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="0"
                android:inputType="number"
                android:textColor="@color/red"
                android:textSize="16sp" />


        </RelativeLayout>


        <Button
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:padding="11dp"
            android:textSize="21sp"
            android:backgroundTint="@color/blue"
            android:text="@string/calculate"/>

    </LinearLayout>


</ScrollView>