<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="28dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/txtSize"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardSpec"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/txtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_arrow_forward_" />

                <TextView
                    android:id="@+id/txtSpec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:text="@string/specifications"
                    android:textColor="@color/blue"
                    android:textSize="22sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOper"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/cardSpec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_arrow_forward_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>


                <TextView
                    android:id="@+id/txtOper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:text="@string/operation"
                    android:textColor="@color/blue"
                    android:textSize="22sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCalc"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/cardOper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_arrow_forward_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/txtCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/blue"
                    android:layout_marginStart="12dp"
                    android:text="@string/calculation"
                    android:textSize="22sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>